Update theme description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cassidy-dark",
   "displayName": "Cassidy Dark",
-  "description": "A VS Code theme inspired by Monokai",
+  "description": "A modern, clean, flat Visual Studio Code dark theme inspired by Monokai",
   "version": "0.0.2",
   "publisher": "//to be updated upon v1",
   "repository": {
